crates/compiler/test_syntax/tests/snapshots/fail/exponential_else_branch_parsing_repro.expr.roc
ee&&i!efs@&exp5/osif.!see&e@&ex/if.!see&&ifss@osif.!see&e@&ex/if.!see&&ifss@5/if.!if.!&ex/if.!see&&ifss@5/if.!is5/if.osif.!see&e@&ex/if.!see&&ifss@5/if.!if.!xpAs5/if.!see&e@&e&&ifss@5/if.!is5/if.osif.!see&e@&ex/if.!see&&ifss@5/if.!if.!xpAs5/if.!see&e@&expos5/if.!if.!poxpos5/if.!if.!pos5/if.!xp#'
then#f#,w
{
}&&ifs!s-

t__T+_____^_zese
else